# lerpz-data

./: .gitignore  Cargo.toml  pyproject.toml  ruff.toml  setup.cfg  setup.py
examples/: dagster.py  example.py  example_python.py
lerpz_data/: __init__.py  definitions.py  invoice.py  transform.py
python/lerpz_invoice/: __init__.py  catalog.py  invoice.py  product.py  transform.py
src/: correction.rs  invoice.rs  lib.rs  transform.rs  visualize.rs
