[project]
name = "lerpz-data"
version = "0.1.0"
requires-python = "==3.12.*"
classifiers = ["Programming Language :: Rust", "Programming Language :: Python"]
dependencies = [
    "dagster==1.10.*",
    "dagster-cloud==1.10.*",
    "polars==1.21.*",
    "pydantic==2.10.*",
]

[dependency-groups]
dev = [
    "dagster-webserver",
]
test = [
    "pytest"
]
lint = [
    "ruff"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "test.definitions"
code_location_name = "test"

[tool.uv]
default-groups = ["dev", "test", "lint"]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/**.rs"}
]
