[project]
name = "lerpz-data"
version = "0.1.0"
requires-python = "==3.12.*"
classifiers = ["Programming Language :: Rust", "Programming Language :: Python"]
dependencies = [
    "dagster==1.10.*",
    "polars==1.21.*",
    "pydantic==2.10.*",
]

[tool.uv]
default-groups = ["dev", "test", "lint"]

[dependency-groups]
dev = [
    "dagster-webserver"
]
test = [
    "pytest"
]
lint = [
    "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
